tests/baselines/reference/templateStringInModuleName.errors.txt
templateStringInModuleName.ts(1,16): error TS1003: Identifier expected.
templateStringInModuleName.ts(1,21): error TS1005: ';' expected.
templateStringInModuleName.ts(4,16): error TS1003: Identifier expected.
templateStringInModuleName.ts(4,24): error TS1005: ';' expected.


==== templateStringInModuleName.ts (4 errors) ====
    declare module `M1` {
                   ~~~~
!!! error TS1003: Identifier expected.
                        ~
!!! error TS1005: ';' expected.
    }
    
    declare module `M${2}` {
                   ~~~~
!!! error TS1003: Identifier expected.
                           ~
!!! error TS1005: ';' expected.
    }